# FactorGraphTest

./: CMakeLists.txt
include/: BinReader.h
scripts/: GPSIMUFileTrans.py  plot_gps.py
src/: BinTest.cpp  ImuFactorsExample.cpp  ImuGlobalOptimize.cpp
